--- a/index.html
+++ b/index.html
@@ -1,38 +1,29 @@
 <!DOCTYPE html>
-<html lang="es"> 
-  <head> 
-    <meta charset="UTF-8"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>La Gusguería - Menú Digital</title> 
-    <script src="https://cdn.tailwindcss.com"></script> 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet"> 
-    <style> body { font-family: 'Montserrat', sans-serif; -webkit-tap-highlight-color: transparent; } .product-card { transition: transform 0.2s; } .product-card:active { transform: scale(0.96); } .img-container { position: relative; overflow: hidden; border-radius: 1.5rem; background: #f3f4f6; } @keyframes bounce { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.1); } } .animate-pop { animation: bounce 0.3s ease-out; } 
-    </style> 
-  </head> 
-  <body class="bg-gray-50 pb-40">
-    <header class="bg-gradient-to-r from-orange-600 to-red-600 text-white p-10 text-center shadow-2xl rounded-b-[3.5rem] sticky top-0 z-40">
-      <h1 class="text-4xl font-black uppercase tracking-tighter">La Gusguería</h1>
-      <p class="text-[10px] font-bold tracking-[0.3em] opacity-90 mt-2 italic uppercase">Para apagar la sed de la mala</p>
-    </header>
 
-    <main id="menu-container" class="p-4 max-w-md mx-auto space-y-4 mt-4">
-      <div class="text-center py-20 text-gray-400 font-bold italic">Cargando el antojo...</div>
-    </main>
+<html lang="es"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>La Gusguería - Menú Digital</title> <script src="https://cdn.tailwindcss.com"></script> <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet"> <style> body { font-family: 'Montserrat', sans-serif; -webkit-tap-highlight-color: transparent; } .product-card { transition: transform 0.2s; } .product-card:active { transform: scale(0.96); } .img-box { position: relative; overflow: hidden; border-radius: 1.5rem; background: #f3f4f6; width: 6rem; height: 6rem; flex-shrink: 0; } @keyframes pop { 0% { transform: scale(1); } 50% { transform: scale(1.1); } 100% { transform: scale(1); } } .animate-pop { animation: pop 0.3s ease-out; } </style> </head> <body class="bg-gray-50 pb-40">
 
-<footer class="fixed bottom-0 left-0 right-0 bg-white/95 backdrop-blur-md p-6 shadow-[0_-10px_30px_rgba(0,0,0,0.1)] border-t border-gray-100 flex justify-between items-center z-50 rounded-t-[2.5rem] max-w-2xl mx-auto">
+<header class="bg-gradient-to-r from-orange-600 to-red-600 text-white p-10 text-center shadow-2xl rounded-b-[3.5rem] sticky top-0 z-40">
+    <h1 class="text-4xl font-black uppercase tracking-tighter">La Gusguería</h1>
+    <p class="text-[10px] font-bold tracking-[0.3em] opacity-90 mt-2 italic uppercase">Para apagar la sed de la mala</p>
+</header>
+
+<main id="menu-container" class="p-4 max-w-md mx-auto space-y-4 mt-4">
+    <div class="text-center py-20 text-gray-400 font-bold italic">Cargando delicias...</div>
+</main>
+
+<footer class="fixed bottom-0 left-0 right-0 bg-white/95 backdrop-blur-md p-6 shadow-2xl border-t border-gray-100 flex justify-between items-center z-50 rounded-t-[2.5rem] max-w-2xl mx-auto">
     <div class="flex flex-col">
-        <span class="text-gray-400 text-[10px] uppercase font-black tracking-widest">Total del Pedido</span>
+        <span class="text-gray-400 text-[10px] uppercase font-black tracking-widest">Total</span>
         <span id="total-display" class="text-3xl font-black text-gray-900 tracking-tighter">$0.00</span>
     </div>
-    <button onclick="enviarWhatsApp()" class="bg-green-600 hover:bg-green-700 text-white px-8 py-4 rounded-2xl font-black uppercase text-xs shadow-lg shadow-green-100 active:scale-95 transition-all">
+    <button onclick="enviarWhatsApp()" class="bg-green-600 hover:bg-green-700 text-white px-8 py-4 rounded-2xl font-black uppercase text-xs shadow-lg active:scale-95 transition-all">
         Pedir por WhatsApp
     </button>
 </footer>
 
 <script>
-    // CONFIGURACIÓN BASADA EN TU ESTRUCTURA
-    const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vT1TiLuDQq5Dk3vJjhmd534zHWNeHu4v-UAnDcfZxMpFaTNAzn-hy5Wmn8O1IqYvNUiMF7qbGfGLSBR/pub?gid=1374506693&single=true&output=csv';
-    const HASH_TEL = "NTIxNTYzOTQ3NTQ3OA=="; // Número: 5215639475478
+    const CSV_URL = '[https://docs.google.com/spreadsheets/d/e/2PACX-1vT1TiLuDQq5Dk3vJjhmd534zHWNeHu4v-UAnDcfZxMpFaTNAzn-hy5Wmn8O1IqYvNUiMF7qbGfGLSBR/pub?gid=1374506693&single=true&output=csv](https://docs.google.com/spreadsheets/d/e/2PACX-1vT1TiLuDQq5Dk3vJjhmd534zHWNeHu4v-UAnDcfZxMpFaTNAzn-hy5Wmn8O1IqYvNUiMF7qbGfGLSBR/pub?gid=1374506693&single=true&output=csv)';
+    const HASH_TEL = "NTIxNTYzOTQ3NTQ3OA=="; 
 
     let carrito = [];
     let total = 0;
@@ -41,33 +32,25 @@
         try {
             const res = await fetch(CSV_URL + '&t=' + Date.now());
             const csvText = await res.text();
-            // Separamos por filas y quitamos la cabecera
             const filas = csvText.split(/\r?\n/).slice(1);
             const container = document.getElementById('menu-container');
             container.innerHTML = "";
 
             filas.forEach(f => {
-                // Regex para separar por coma respetando comillas
                 const c = f.split(/,(?=(?:(?:[^"]*"){2})*[^"]*$)/).map(x => x.replace(/"/g, '').trim());
                 
-                // Basado en tu estructura:
-                // 0:ID, 1:Categoria, 2:Nombre, 3:Descripcion_ES, 4:Precio, 5:Estado, 6:ImagenURL
                 if (c.length < 7) return;
 
                 const nombre = c[2];
                 const desc = c[3];
                 const precio = parseFloat(c[4]) || 0;
-                const estado = c[5] ? c[5].toLowerCase() : "";
-                const imgUrl = c[6] || "";
-                const isAgotado = estado === 'agotado';
-
-                // Imagen con respaldo
-                const foto = imgUrl !== "" ? imgUrl : "[https://via.placeholder.com/300x300?text=La+Gusgueria](https://via.placeholder.com/300x300?text=La+Gusgueria)";
+                const isAgotado = c[5] && c[5].toLowerCase() === 'agotado';
+                const imgUrl = c[6] || "[https://via.placeholder.com/300x300?text=La+Gusgueria](https://via.placeholder.com/300x300?text=La+Gusgueria)";
 
                 container.innerHTML += `
                     <div class="product-card p-3 rounded-[2rem] bg-white border border-gray-100 flex gap-4 shadow-sm ${isAgotado ? 'opacity-50 grayscale' : ''}">
-                        <div class="w-24 h-24 flex-shrink-0 img-container">
-                            <img src="${foto}" class="w-full h-full object-cover" onerror="this.src='[https://via.placeholder.com/300x300?text=Antojo](https://via.placeholder.com/300x300?text=Antojo)'">
+                        <div class="img-box">
+                            <img src="${imgUrl}" class="w-full h-full object-cover" onerror="this.src='[https://via.placeholder.com/300x300?text=Gusgueria](https://via.placeholder.com/300x300?text=Gusgueria)'">
                         </div>
                         <div class="flex-1 flex flex-col justify-between py-1">
                             <div>
@@ -79,15 +62,14 @@
                                 <span class="text-lg font-black text-gray-900">$${precio.toFixed(2)}</span>
                                 ${isAgotado ? 
                                     '<span class="text-[8px] font-black text-red-500 border border-red-200 px-2 py-1 rounded-lg">AGOTADO</span>' : 
-                                    `<button onclick="add('${nombre.replace(/'/g,"")}', ${precio})" class="bg-orange-100 text-orange-600 w-10 h-10 rounded-xl font-black text-xl">+</button>`
+                                    `<button onclick="add('${nombre.replace(/'/g,"")}', ${precio})" class="bg-orange-100 text-orange-600 w-10 h-10 rounded-xl font-black text-xl hover:bg-orange-500 hover:text-white transition-colors">+</button>`
                                 }
                             </div>
                         </div>
                     </div>`;
             });
         } catch (e) {
-            console.error("Error cargando CSV:", e);
-            document.getElementById('menu-container').innerHTML = "<p class='text-center text-red-400'>Error al conectar con el menú.</p>";
+            document.getElementById('menu-container').innerHTML = "<p class='text-center p-10 text-red-400 font-bold'>Error al conectar con el menú.</p>";
         }
     }
 
@@ -104,7 +86,7 @@
 
     function enviarWhatsApp() {
         if (carrito.length === 0) {
-            alert("¡El carrito está vacío, carnal!");
+            alert("¡El carrito está vacío!");
             return;
         }
         const folio = Math.floor(Math.random() * 9000) + 1000;
@@ -113,7 +95,7 @@
         carrito.forEach(i => m += `▪️ ${i.n} .. $${i.p.toFixed(2)}\n`);
         m += `--------------------------------\n`;
         m += `*💰 TOTAL: $${total.toFixed(2)}*\n\n`;
-        m += `📍 _¡Me urge apagar la sed de la mala!_`;
+        m += `📍 _¡Apagando la sed de la mala!_`;
         
         const link = `https://wa.me/${atob(HASH_TEL)}?text=${encodeURIComponent(m)}`;
         window.open(link, "_top");
@@ -121,5 +103,4 @@
 
     cargarMenu();
 </script>
-</body> 
-</html>
+</body> </html>
