--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>La Gusguería - Menú Digital</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Tailwind CSS CDN -->
+  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { font-family: 'Montserrat', sans-serif; }
@@ -18,9 +18,7 @@
       max-width: 200px;
       z-index: 50;
     }
-    .pop {
-      animation: pop 0.3s ease;
-    }
+    .pop { animation: pop 0.3s ease; }
     @keyframes pop {
       0% { transform: scale(1); }
       50% { transform: scale(1.3); }
@@ -74,7 +72,7 @@
           const img = document.createElement("img");
           img.src = imgURL;
           img.alt = nombre;
-          img.className = "w-24 h-24 object-cover rounded-l-2xl cursor-pointer";
+          img.className = "w-full h-auto max-w-[120px] object-cover rounded-l-2xl cursor-pointer";
           if (estado.trim().toLowerCase() === "agotado") {
             img.classList.add("opacity-40", "grayscale");
           }
@@ -123,7 +121,7 @@
       setTimeout(() => totalEl.classList.remove("pop"), 300);
     }
 
-    function mostrarTooltip(e, texto) {
+function mostrarTooltip(e, texto) {
       if (!texto) return;
       const tooltip = document.createElement("div");
       tooltip.className = "tooltip";
